<resources>
    <string name="app_name">FYPMock</string>
    <string name="start_navigation">Start Navigation</string>
    <string name="navigation">Navigation</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="fav_poi">Favourite POIs</string>
    <string name="view_map">View Map</string>
    <string name="plan_route">Plan Route</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="no_account">I don\'t have an account</string>
    <string name="have_account">I have an account</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="selected_poi">Selected POIs</string>
    <string name="calculateRoute">Calculate Route</string>
    <string name="favourite">Favourite</string>
    <string name="allPois">All POIs</string>
    <string name="poiName">POI Name</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addPoi">Add POI</string>
    <string name="search_here">Search here…</string>
    <string name="poi_order">Order to visit all POI(s): </string>
    <string name="order_of_poi">Order of POI</string>
    <string name="add_more_poi">Add More POI</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="Hidden">Hidden</string>
    <string name="save_changes">Save Changes</string>
    <string name="authenticate">Authenticate</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="preview_map">Preview Map</string>
    <string name="end_preview">End Preview</string>
    <string name="fav_analysis">Favourite POI Analysis</string>
    <string name="total_poi_to_display">"Total POIs to display: "</string>
    <string name="retype_password">Retype Password</string>
    <string name="welcome_message">Indoor navigation to navigate through the mall hassle free!</string>
    <string name="copyright">©2022 TCK ALL RIGHTS RESERVED</string>
    <string name="guideUser">Start planning your navigation now!</string>
    <string name="welcome_user">Welcome!</string>
    <string name="get_started">Get Started</string>
    <string name="visited_analysis">Visited POI Analysis</string>
    <string name="guideAdmin">View visisted POI analysis now!</string>
    <string name="view_analysis">View Analysis</string>
    <string name="create">Create</string>
    <string name="create_admin">Create Admin</string>
    <string name="select_privilege">Select Privilege</string>
</resources>