<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/user_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_favourite"
            android:title="@string/fav_poi" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_map_24"
            android:title="@string/view_map" />

        <item
            android:id="@+id/plan_route"
            android:icon="@drawable/ic_baseline_navigation_24"
            android:title="@string/plan_route" />

        <item
            android:visible="false"
            android:id="@+id/fav_chart"
            android:icon="@drawable/ic_baseline_bar_chart"
            android:title="@string/fav_analysis" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>