<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/black_logo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:maxHeight="70dp"/>

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="28sp"
            android:textColor="@color/mint"
            android:gravity="center"
            android:text="@string/welcome_user"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_guideUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textColor="@color/mint"
            android:gravity="center"
            android:text="@string/guideUser"/>

        <Button
            android:visibility="gone"
            android:id="@+id/btn_toSelectPoi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/default_button_bg"
            android:text="@string/get_started"
            android:textColor="@color/white" />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_guideAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textColor="@color/mint"
            android:gravity="center"
            android:text="@string/guideAdmin"/>

        <Button
            android:visibility="gone"
            android:id="@+id/btn_toVisitedAnalysis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/default_button_bg"
            android:text="@string/view_analysis"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_semibolditalic"
        android:textSize="8sp"
        android:gravity="center"
        android:text="@string/copyright"/>

</LinearLayout>